# shadow

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LOG  README.md  build.rs  docker-compose.yml  go.mod  go.sum  import.sh  index.html  makefile  rust-toolchain.toml
.github/workflows/: .#go.yml  ci.yml  clippy.yml  go.yml  golangci.yml  mmr.yml  production.yaml  rust.yml  shadow.yml  shaodw.yml  staging.yaml  staging.yml
.maintain/: release-template.md
Dockerfiles/: alpine.Dockerfile  builder.Dockerfile  release.Dockerfile
api/: Cargo.toml  api.go  controller.go  err.go  http.go  main.go  types.go
api/docs/: docs.go  swagger.json  swagger.yaml
api/src/: error.rs  lib.rs  root.rs
api/src/ethereum/: count.rs  ethash_proof.rs  ffi.rs  mmr_leaf.rs  mmr_root.rs  mod.rs  only_receipt.rs  parcel.rs  parent_mmr_root.rs  proof.rs  receipt.rs  receipt_proof.rs
api/tests/: scale.rs
api/tests/mock/: ethash_proof.rs  hash.rs  header.rs  header_thing.rs  mod.rs
cmd/: epoch.go  export.go  geth.go  header.go  import.go  proof.go  root.go  run.go  shadow.go  test.go  version.go
cmd/proof/: main.go
cmd/shadow/: main.go
cmd/test/: test.go
core/: cache.go  ethdb.go  scale.go  shadow.go
dargo/: main.go
dockerfiles/: mmr.Dockerfile  shadow.Dockerfile
examples/: bench.rs  doctor.rs  header.rs  http.rs  mmr.rs  monitor.rs  proof.rs  r2d2.rs  receipt.rs  run_mmr.rs  runner.rs  uncle.rs
ffi/: Cargo.toml  build  build.rs  go.mod  go.sum
ffi/pkg/ethashproof/: cache.go  dag_merkle_proof.go  dag_merkle_root.go  utils.go  utils_test.go
ffi/pkg/ethashproof/ethash/: algorithm.go  consensus.go  ethash.go  ethashproof_ext.go  sealer.go
ffi/pkg/log/: assert.go  log.go
ffi/pkg/shadow/: config.go  lock.go
ffi/pkg/shadow/config/: config.go
ffi/pkg/shadow/eth/: geth.go  header.go  mock.go  proof.go  receipt.go  types.go
ffi/pkg/shadow/ffi/: mod.go
ffi/pkg/shadow/log/: mod.go
ffi/pkg/shadow/util/: assert.go
ffi/src/: ffi.rs  lib.rs
internal/: config.go  header.go  lock.go  proof.go
internal/cmd/: epoch.go  header.go  proof.go  receipt.go  root.go  run.go  shadow.go  test.go  version.go
internal/core/: cache.go  enum.go  ethdb.go  http.go  params.go  rpc.go  scale.go  schema.go  shadow.go  sql.go  types.go
internal/eth/: api.go  ethdb.go  geth.go  header.go  mock.go  proof.go  receipt.go  rpc.go  serde.go  types.go
internal/ffi/: mmr.go  mod.go
internal/ffi/tt/: t.go
internal/log/: mod.go
internal/rpc/: server.go  util.go
internal/tests/: shadow_test.go
internal/util/: assert.go  config.go  encode.go  parallel.go
lib/: rpc.go
mmr/: Cargo.toml  bridge.rs  codec.rs  ethash.rs  ffi.rs  hash.rs  lib.rs  main.rs  model.rs  pool.rs  result.rs  runner.rs  schema.rs  sql.rs  store.rs
mmr-client/: Cargo.toml
mmr-client/src/: mmr.rs  tests.rs
mmr/bridge/: ethash_proof.rs  header.rs  mod.rs  util.rs
mmr/ffi/: mod.rs
mmr/src/: client.rs  error.rs  ethash.rs  hash.rs  helper.rs  lib.rs  main.rs  mmr_client_for_mysql.rs  mmr_client_for_rocksdb.rs  mmr_client_trait.rs  mysql_store.rs  rocksdb_batchstore.rs  rocksdb_store.rs
mmr/tests/: mmr.rs
mock/: proofs.go  uncle.go
pkg/ethashproof/: cache.go  dag_merkle_proof.go  dag_merkle_root.go
pkg/ethashproof/ethash/: algorithm.go  consensus.go  ethash.go  ethash_test.go  ethashproof_ext.go  sealer.go  sealer_test.go
pkg/ethashproof/mtree/: util.go
pkg/internal/: config.go  lock.go
pkg/internal/eth/: api.go  header.go  mock.go  proof.go  receipt.go  scale.go
pkg/internal/ffi/: mod.go
pkg/internal/log/: mod.go
pkg/internal/util/: assert.go
pkg/log/: log.go
pkg/shadow/: config.go  lock.go
pkg/shadow/eth/: geth.go  header.go  mock.go  proof.go  receipt.go
pkg/shadow/ffi/: mod.go
pkg/shadow/util/: assert.go
primitives/src/: runtime.rs
primitives/src/frame/bridge/: relay_authorities.rs
primitives/src/frame/ethereum/: backing.rs
rpc/: http.go  json.go  server.go
rs/: helper.rs  lib.rs  result.rs  schema.rs
rs/bridge/: ethash_proof.rs  mod.rs
rs/chain/: array.rs  req.rs
rs/chain/eth/: header.rs  mod.rs
rs/db/: model.rs  pool.rs  schema.rs
rs/ffi/: mod.rs
rs/mmr/: mod.rs  runner.rs  store.rs
shadow/: main.go  mmr.rs
src/: .#lib.rs  conf.rs  epoch.rs  lib.rs  result.rs  runner.rs  shared.rs
src/api/: mod.rs  proof.rs  receipt.rs
src/api/eth/: count.rs  ffi.rs  header.rs  mod.rs  proof.rs  proposal.rs  receipt.rs
src/api/ethereum/: count.rs  ffi.rs  header.rs  helper.rs  mmr.rs  mmr_leaf.rs  mmr_root.rs  mod.rs  parcel.rs  proof.rs  proposal.rs  receipt.rs
src/chain/: byte.rs  mod.rs
src/chain/eth/: confirmation.rs  confirmations.rs  ethash_proof.rs  header.rs  mmr_proof.rs  mod.rs  relay.rs
src/cmd/: count.rs  epoch.rs  export.rs  import.rs  mod.rs  run.rs  trim.rs
src/darwinia/: block_subscriber.rs  client.rs  darwinia.rs  darwinia_event_listener.rs  database.rs  event_handler.rs  event_subscriber.rs  mod.rs
src/db/: mod.rs  model.rs  pool.rs  schema.rs  sql.rs
src/mmr/: batchstore.rs  hash.rs  helper.rs  mod.rs  runner.rs  runner_mysql.rs  store.rs
tests/: api.rs  mmr.rs  scale.rs  shadow_test.go
tests/mock/: ethash_proof.rs  ethash_proof_codec.rs  header.rs  header_thing.rs  mock_header_19.rs  mod.rs
types/: Cargo.toml
types/src/: lib.rs
types/src/chain/ethereum/: block.rs  mod.rs  receipt.rs
types/src/rpc/ethereum/: block.rs  mod.rs  receipt.rs
util/: assert.go  collection.go  config.go  header.go  lock.go  proof.go  scale.go
utils/: assert.go  header.go  proof.go
