[package]
name = "darwinia-shadow"
version = "0.2.6"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
description = "The shadow service for relayers and verify workers to retrieve header data and generate proof."
repository = "https://github.com/darwinia-network/shadow"
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/darwinia-shadow"
homepage = "https://github.com/darwinia-network/shadow"
include = [
  "go.mod",
  "go.sum",
  "build.rs",
  "pkg/**/*",
  "src/**/*",
  "Cargo.toml",
  "./README.md",
]
keywords = ["darwinia", "substrate", "ethereum", "service"]
readme = './README.md'
links = "darwinia_shadow"

[[bin]]
name = "shadow"
path = "src/bin/shadow.rs"

[lib]
path = "src/lib.rs"

[dependencies]
atty = "0.2.14"
actix-web = "2.0.0"
actix-rt = "1.0"
blake2-rfc = "0.2.18"
cmmr = { version = "0.3.0", package = "ckb-merkle-mountain-range"}
dirs = "2.0.2"
env_logger = "0.7.1"
etc = "0.1.7"
futures = "0.3"
libc = "0.2.71"
log = "0.4.0"
reqwest = { version = "0.10", features = ["json"] }
rlp = "0.4.5"
tar = "0.4.30"
rocksdb = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.17"
uint = "0.8.3"

[dependencies.primitives]
package = "darwinia-bridge-primitives"
version = "0.1.4-alpha.0"
features = ["rpc"]

[dependencies.scale]
package = "parity-scale-codec"
version = "1.3.5"
features = ["derive"]
