[package]
name = "darwinia-shadow"
version = "0.4.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
description = "The shadow service for relayers and verify workers to retrieve header data and generate proof."
repository = "https://github.com/darwinia-network/shadow"
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/darwinia-shadow"
homepage = "https://github.com/darwinia-network/shadow"
keywords = ["darwinia", "substrate", "ethereum", "service"]
readme = './README.md'

[[bin]]
name = "shadow"
path = "src/bin/shadow.rs"

[lib]
path = "src/lib.rs"

[dependencies]
actix-rt = "1.0"
dirs = "2.0.2"
log = "0.4.0"
env_logger = "0.7.1"
tokio = { version = "0.2.22", features = ["macros", "fs"] }
reqwest = { version = "0.10", features = ["json"] }
structopt = "0.3.17"
rocksdb = "0.15.0"
mysql = "*"
thiserror = "1.0"
anyhow = "1.0.34"
mmr = { path = "./mmr" }
ffi = { path = "./ffi" }
api = { path = "./api" }

[dependencies.primitives]
package = "darwinia-bridge-primitives"
version = "0.3.3"
features = ["rpc"]