[package]
name = "api"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>", "Aki <wuminzhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
thiserror = "1.0"
anyhow = "1.0.34"
actix-web = "2.0.0"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
array-bytes = "0.1.0"

mmr = { path = "../mmr" }
ffi = { path = "../ffi" }
primitives = { features = ["rpc"], package = "darwinia-bridge-primitives", git = "https://github.com/darwinia-network/bridger", branch = "add-ethereum-basefee" }

[dependencies.codec]
package = "parity-scale-codec"
version = "2"
features = ["derive"]

[dev-dependencies]
"tokio" = "0.2.22"

