[package]
name = "mmr"
version = "0.1.0"
authors = ["Aki <wuminzhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
thiserror = "1.0"
anyhow = "1.0.34"
array-bytes = "0.1.0"
cmmr = { version = "0.3.0", package = "ckb-merkle-mountain-range"}
blake2-rfc = "0.2.18"
rocksdb = "0.15.0"
mysql = "*"
tar = "0.4.30"
atty = "0.2.14"